Replace string in single pass

Buggy behavior:

Let's say filename = "/path/filename%2something.bundle" and
res = "favorite.kpp"

Then, QString("bundle://%1:%2").arg(filename).arg(res) would be replaced as:
bundle:///path/filenamefavorite.kppsomething.bundle:favorite.kpp

when it should be replaced as:
bundle:///path/filename%2something.bundle:favorite.kpp

BUG:432488